<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Plandroid</string>
    <string name="intro_text">This is the event map prototype, choose scenario below:</string>
    <string name="scen_baseline">Event creation - Baseline</string>
    <string name="scen_private_small_conflict">Small event - small conflict</string>
    <string name="scen_private_large_conflict">Small event - Large conflict</string>
    <string name="scen_moderate_conflict">Large event - Moderate conflict</string>
    <string name="scenario_start">Start scenario</string>
    <string name="event_title">Event title:</string>
    <string name="start_time">Start time:</string>
    <string name="end_time">End time:</string>
    <string name="invite_friend">Invite Friends</string>
    <string name="create_event">Create event</string>
    <string name="dismiss_conflict">Remove</string>
    <string name="empty"></string>
    <string name="title_resolve_conflict">Guests with conflicting events</string>
    <string name="title_create_event">Create Event</string>
    <string name="title_invite_friends">Invite Friends</string>
    <string name="conflict_description">You may remove guests from the invite list by clicking the X here.</string>
    <string name="conflict_finish_button">Done</string>
</resources>
