<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/intro_text" />
	<RadioGroup android:layout_height="wrap_content" android:id="@+id/radioGroup1"
		android:layout_width="fill_parent">
		<RadioButton android:layout_height="wrap_content"
			android:id="@+id/radio_baseline" android:layout_width="wrap_content"
			android:checked="true" android:text="@string/scen_baseline"></RadioButton>
		<RadioButton android:layout_height="wrap_content"
			android:id="@+id/radio_private_small" android:layout_width="wrap_content"
			android:text="@string/scen_private_small_conflict"></RadioButton>
		<RadioButton android:layout_height="wrap_content"
			android:id="@+id/radio_private_big" android:layout_width="wrap_content"
			android:text="@string/scen_private_large_conflict"></RadioButton>
	</RadioGroup>
	<Button android:text="@string/scenario_start"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:id="@+id/scenarioStartButton"></Button>
</LinearLayout>
