<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<TextView android:layout_height="wrap_content" android:id="@+id/textView1"
		android:layout_width="wrap_content" android:text="@string/event_title"
		android:textStyle="bold"></TextView>
	<EditText android:layout_height="wrap_content" android:text="EditText"
		android:layout_width="fill_parent" android:id="@+id/textEventTitle"></EditText>
	<TextView android:layout_height="wrap_content" android:id="@+id/textView2"
		android:text="@string/start_time" android:layout_width="wrap_content"
		android:textStyle="bold"></TextView>
	<TextView android:layout_height="wrap_content" android:id="@+id/editStartTime"
		android:text="TextView" android:layout_width="wrap_content"></TextView>
	<TextView android:layout_height="wrap_content" android:id="@+id/textView3"
		android:text="@string/end_time" android:layout_width="wrap_content"></TextView>
	<TextView android:text="TextView" android:id="@+id/editEndTime"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:textStyle="bold"></TextView>


</LinearLayout>
